Changed Scrollbar Fixed Formatting On Activity Entry

--- a/Themes SASS/darkTheme-AppVer.scss
+++ b/Themes SASS/darkTheme-AppVer.scss
@@ -22,6 +22,14 @@ body {
 	color: $text;
 	font-family: "Poppins", sans-serif;
 }
+*::-webkit-scrollbar {
+	width: 5px;
+	background: transparent;
+}
+*::-webkit-scrollbar-thumb {
+	background-color: $accent;
+	-webkit-border-radius: 16px;
+}
 
 #nav {
 	margin-left: 150px;
@@ -942,7 +950,7 @@ body {
 									}
 								}
 								.time {
-									left: 15px;
+									left: 15px !important;
 								}
 							}
 							&:hover {
@@ -1085,8 +1093,4 @@ body {
 	.container {
 		max-width: 100%;
 	}
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: $accent;
 }
